5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1773_2544.log
== SUBMITION (2019-06-03 10:56:05) 
-- CODE:
from numpy import*
x=array(eval(input("digite os tamanhos: ")))
h=0
a=0
b=0
c=0
while(len(x)>h):
	if(x[h]>=10):
		a=a+1
		h=h+1
	elif(x[h]>=5and(x[h]<10):
		  b=b+1
		  h=h+1
	else:
		  c=c+1
		  h=h+1
print(a)
print(b)
print(c)
-- EXECUTION TIME:
0.688476
-- ERROR:
  File "/home/codebench/codes/1773/2544/main.py", line 11
    elif(x[h]>=5and(x[h]<10):
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-03 10:59:17) 
-- CODE:
from numpy import*
x=array(eval(input("digite os tamanhos: ")))
h=0
a=0
b=0
c=0
while(len(x)>h):
	if(x[h]>=10):
		a=a+1
		h=h+1
	elif(x[h]>=5)and(x[h]<10):
		  b=b+1
		  h=h+1
	else:
		  c=c+1
		  h=h+1
print(a)
print(b)
print(c)
-- EXECUTION TIME:
1.08496
-- TEST CASE 1:
---- input:
[8.2,5.4,1.3,20,18.4]
---- correct output:
2
2
1
---- user output:
2
2
1
-- TEST CASE 2:
---- input:
[8.2,5.4,5.3,20,18.4]
---- correct output:
2
3
0
---- user output:
2
3
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
